Gave each screen a label (some silly).  Improved navigation.
Navigation:
-Previous/Next buttons hidden/disabled at appropriate times
-Can't navigate out of decryption/simulation while simulation in
progress
-Automatically moved to questionaire once simulation is finished

Content:
-Added labels to all screens
-Timer is hidden when not in use

Misc:
-Timer shortened to 5s for testing purposes
-Made fullscreen
-Removed min/max/close buttons

Todo:
-Decryption
-Questionaire + Data Export
-Scoring (+Data Export?)
-Instruction Tests 1,2,3
-Add screenshots to instructions
-Improve instruction labels and layout

--- a/MarketSimulation/decryptionwindow.ui
+++ b/MarketSimulation/decryptionwindow.ui
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>DecryptionWindow</class>
  <widget class="QWidget" name="DecryptionWindow">
   <property name="geometry">
@@ -15,7 +13,20 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>95</x>
+     <y>122</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>This is the decryption screen</string>
+   </property>
+  </widget>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
