--- a/MarketSimulation/finalscreen.ui
+++ b/MarketSimulation/finalscreen.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TitleScreen</class>
- <widget class="QWidget" name="TitleScreen">
+ <class>finalscreen</class>
+ <widget class="QWidget" name="finalscreen">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,15 +16,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>90</y>
-     <width>291</width>
-     <height>111</height>
+     <x>40</x>
+     <y>120</y>
+     <width>351</width>
+     <height>121</height>
     </rect>
    </property>
    <property name="text">
-    <string>Please do not click the Next button until told to do
-so by the experimenter.</string>
+    <string>GG.  I owe you eleventy billion dollars.</string>
    </property>
   </widget>
  </widget>
