--- a/MarketSimulation/instructionscreentest3.ui
+++ b/MarketSimulation/instructionscreentest3.ui
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>InstructionScreenTest3</class>
  <widget class="QWidget" name="InstructionScreenTest3">
   <property name="geometry">
@@ -15,7 +13,21 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>210</y>
+     <width>351</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>To check your understanding please complete the above decryption and
+then press the submit button.</string>
+   </property>
+  </widget>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
