--- a/MarketSimulation/quest1.ui
+++ b/MarketSimulation/quest1.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TitleScreen</class>
- <widget class="QWidget" name="TitleScreen">
+ <class>quest1</class>
+ <widget class="QWidget" name="quest1">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,15 +16,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>90</y>
-     <width>291</width>
-     <height>111</height>
+     <x>50</x>
+     <y>60</y>
+     <width>231</width>
+     <height>201</height>
     </rect>
    </property>
    <property name="text">
-    <string>Please do not click the Next button until told to do
-so by the experimenter.</string>
+    <string>Thanks for playing.  What's you, Major?</string>
    </property>
   </widget>
  </widget>
